# src/db/postgres/app_views.py
@@ -82,6 +82,7 @@ class AppViewManager:
                 ) AS updated_at,
                 (a.song_id IS NOT NULL) AS audio_available,
                 a.file_path AS audio_file_path,
+                a.loudness_gain_db,
                 (d.song_id IS NOT NULL) AS drum_sheet_available,
                 d.file_path AS drum_sheet_file_path,
                 (s.song_id IS NOT NULL) AS source_available,
@@ -120,6 +121,7 @@ class AppViewManager:
                 p.updated_at,
                 p.audio_available,
                 p.audio_file_path,
+                p.loudness_gain_db,
                 p.drum_sheet_available,
                 p.drum_sheet_file_path,
                 p.source_available,
